--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "dateformat": "^4.5.1",
     "dayjs": "^1.10.6",
+    "firebase": "^8.9.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
